<resources>
    <string name="app_name">Mama &amp; Baby Journey</string>

    <string-array name="Workplace_Locations">
        <item>اختر مكان العمل</item>
        <item>مركز تابع للانروا</item>
        <item>مركز صحي</item>
        <item>عيادة خاصة</item>
        <item>مشفى</item>
    </string-array>

    <string-array name="AM_Or_PM">
        <item>ص</item>
        <item>م</item>
    </string-array>

    <string-array name="work_Hours_From">
        <item>من الساعة</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="work_Hours_To">
        <item>الى الساعة</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_mother">Mother_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>