<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mamababyjourney.mother_section.screens.Treatments"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_treatments" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mamababyjourney.mother_section.screens.Doctors_And_Clinics"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_doctors_and_clinics" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mamababyjourney.mother_section.screens.Advices"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_advices" />

</navigation>